Fix search css on mobile

--- a/src/assets/less/search.less
+++ b/src/assets/less/search.less
@@ -37,10 +37,43 @@
   width: 700px;  
 }
 
+@media (max-width: 768px) {
+  .searchContent {
+    margin: auto;
+    width: 100%;
+  }  
+}
+
 .searchOverlayQuery {
   padding: 10px;
   margin-top: 40px;
+  display: flex;
+  align-items: center;
+  flex-direction: row;
 }
+
+
+.searchOverlaySearchButton {
+  margin-left: 10px;
+}
+.searchOverlayClearButton {
+  margin-left: 2px;
+}
+
+
+@media (max-width: 768px) {
+  .searchOverlayQuery {
+    flex-direction: column;
+  }
+  .searchOverlayQueryFlex {
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+  .searchOverlaySearchButton {
+    margin-left: 2px;
+  }
+}
+
 
 .searchOverlayResults {
   padding: 10px;
@@ -95,183 +128,3 @@
   }
   */
 }
-
-/* I don't think this is used anymore 
-.search {
-  @media (min-width: 1200px) {
-    display: inline-block;
-  } 
-  @media (max-width: 1200px) {
-    display: none;
-  } 
-  width: 232px;
-  position: relative;
-  border-right: 1px solid @light-gray;
-  margin-right: 11px;
-  margin-top: 10px;
-  vertical-align: top;
-  padding-right: 22px;
-  .search-input-wrapper {
-    position: relative;
-  }
-}
-*/
-
-  /*
-
-  .search-results {
-    position: absolute;
-    top: 35px;
-    left: -35px;
-    width: 400px;
-    -webkit-border-radius: 4px;
-    -moz-border-radius: 4px;
-    border-radius: 4px;
-    display: none;
-    p.no-results {
-      text-align: center;
-      padding: 15px;
-      color: @gray;
-      font-weight: 500;
-    }
-    a {
-      float: none;
-      display: block;
-      padding: 12px 10px;
-      font-weight: 500;
-      border-bottom: 1px solid @light-gray;
-      &:hover {
-        background: @almost-white;
-        color: @spark-blue;
-      }
-      &:first-of-type {
-        border-top-left-radius: 4px;
-        border-top-right-radius: 4px;
-        -webkit-border-top-left-radius: 4px;
-        -moz-border-top-left-radius: 4px;
-        -webkit-border-top-right-radius: 4px;
-        -moz-border-top-right-radius: 4px;
-      }
-      &:last-of-type {
-        border-bottom-left-radius: 4px;
-        border-bottom-right-radius: 4px;
-        -webkit-border-bottom-left-radius: 4px;
-        -moz-border-bottom-left-radius: 4px;
-        -webkit-border-bottom-right-radius: 4px;
-        -moz-border-bottom-right-radius: 4px;
-        border-bottom: none;
-      }
-    }
-    li {
-      clear: both;
-      font-size: 12px;
-      .clearfix;
-      span.tag {
-        float: right;
-        padding-left: 4px;
-        color: @gray;
-        font-weight: bold;
-        width: 70px;
-        margin-top: 10px;
-        &.guide {
-          border-left: 3px solid @carrot;
-        }
-        &.datasheet {
-          border-left: 3px solid @wisteria;
-        }
-        &.reference {
-          border-left: 3px solid @emerald;
-        }
-        &.support {
-          border-left: 3px solid @midnight-blue;
-        }
-      }
-      .left-result {
-        float: left;
-        width: 280px;
-      }
-      .left-note {
-        float: left;
-        width: 380px;
-      }
-      span.title {
-        display: block;
-        font-weight: 500;
-        color: @spark-blue;
-      }
-      span.device {
-        display: inline-block;
-        // font-weight: 300;
-        color: @gray;
-        line-height: 1;
-        padding-left: 7px;
-        border-left: 1px solid @light-gray;
-        span, i {
-          display: inline-block;
-          vertical-align: middle;
-          line-height: 1;
-        }
-        i {
-          display: inline-block;
-          vertical-align: middle;
-          margin-right: 4px;
-          color: @light-gray;
-        }
-      }
-      span.note {
-        // font-weight: 300;
-        color: @gray;
-      }
-      span.page-title {
-        display: inline-block;
-        // font-weight: 300;
-        color: @gray;
-        margin-right: 7px;
-      }
-    }
-    &:after, &:before {
-      bottom: 100%;
-      left: 50%;
-      border: solid transparent;
-      content: " ";
-      height: 0;
-      width: 0;
-      position: absolute;
-      pointer-events: none;
-    }
-    &:after {
-      border-color: rgba(255, 255, 255, 0);
-      border-bottom-color: @NC_WHITE;
-      border-width: 7px;
-      margin-left: -7px;
-    }
-    &:before {
-      border-color: rgba(199, 199, 199, 0);
-      border-bottom-color: @NC_MORNING_MIST;
-      border-width: 8px;
-      margin-left: -8px;
-    }
-  }
-}
-*/
-/*
-@media (prefers-color-scheme: dark) {
-  input.st-search-input {
-    color: @COLOR_Gray_300;
-    background-color: @COLOR_Midnight_500;
-  }
-
-  .st-ui-overlay {
-    color: @COLOR_Gray_300;
-    background-color: @COLOR_Midnight_500;
-  }
-
-}
-
-@media (prefers-color-scheme: light) {
-  .search-results {
-    background: @white;
-    border: 1px solid @light-gray;
-  }
-}
-*/
